--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
         <div id="FindTheTotalStockProduct"></div>
 
         <h2>Find The Product Quantity > 5</h2>
-        <button onclick="CalculateTheTotalRevenueOfProduct()">See Quantity</button>
-        <div id="FindTheProductQuantity>5"></div>
+        <button onclick="FindTheProductQuantityGreaterThan5()">See High Quantity Product</button>
+        <div id="FindTheProductQuantityGreaterThanFive"></div>
+
+        <h2>Find The Total Summary Of Each Product</h2>
+        <button onclick="FindTotalSummaryOfEachProduct()">See Product Summary</button>
+        <div id="FindTotalSummaryOfEachProduct"></div>
+
+        <h2>Find The Highest Total Stock Product</h2>
+        <button onclick="FindHighestTotalStockProduct()">See High Stock Product</button>
+        <div id="FindTheHighestTotalStockProductIdentification"></div>
     </div>
 
 
